--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -171,6 +171,17 @@
 
 .thumbnail {
   flex: 1;
+  position: relative;
+  overflow: hidden;
+}
+
+.thumbnailImg {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .albumInfo {
@@ -257,18 +268,4 @@
   display: block;
   text-decoration: none;
   color: inherit;
-}
-
-.thumbnail {
-  position: relative;
-  overflow: hidden;
-}
-
-.thumbnailImg {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
 }
